add server for auth